[tool.poetry]
name = "bliss-initramfs"
version = "8.0.0"
description = "An utility that generates an initramfs image with all files and dependencies needed to boot your Gentoo Linux system installed on OpenZFS. This program was designed as a simple alternative to genkernel for this use case."
authors = ["Jonathan Vasquez <jon@xyinn.org>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
