[tool.poetry]
name = "bliss-initramfs"
version = "9.4.0"
description = "Generates an initramfs image with all files and dependencies needed to boot your Gentoo Linux system installed on OpenZFS."
authors = ["Jonathan Vasquez <jon@xyinn.org>"]
license = "Simplified BSD License"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "19.10b0"
beautysh = "6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
